# C-for-Financial-Engineering

./: HFT_Engine_Signal_based.cpp  README.md  VisualizePrices.py
Build_and_Benchmark_HFT_System/: CMakeLists.txt  README.md  trades.csv
Build_and_Benchmark_HFT_System/include/: MarketData.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  OrderManager.hpp  Timer.hpp  TradeLogger.hpp
Build_and_Benchmark_HFT_System/src/: Main.cpp  MarketData.cpp  MatchingEngine.cpp  OrderBook.cpp  OrderManager.cpp  TradeLogger.cpp
Build_and_Benchmark_HFT_System/test/: Test_latency.cpp
HFT Tick Processing: CRTP vs Virtual Dispatch/: README.md  main.cpp  market_data.hpp  strategy_crtp.hpp
HFT Tick Processing: CRTP vs Virtual Dispatch/hft-crtp-assignment/include/: strategy_virtual.hpp  utils.hpp
Measuring Virtual vs Non‑Virtual Dispatch in a Minimal HFT Order Processor/: README.md  benchmark_virtual_nonvirtual_order_visualization.py  hft_assignment.cpp
Signal based HFT engine/: README.md  VisualizePrices.py
